objects/ASI_CRM_CN_Authorized_City__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Accounts_Additional_Field__c</fullName>
        <label>WS Name</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Authorized Cities</relationshipLabel>
        <relationshipName>Authorized_Cities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <filterItems>
                <field>ASI_MFM_Brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Brand</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM CN Authorized City</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Authorized Cities</relationshipLabel>
        <relationshipName>Authorized_Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM CN Authorized City</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_City__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN City</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipLabel>Authorized Cities</relationshipLabel>
        <relationshipName>Authorized_Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Authorized City</label>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Authorized City ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Cities</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Authorized_City</fullName>
        <active>true</active>
        <label>ASI CRM CN Authorized City</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>